Closed
Bug 1464826
Opened 7 years ago
Closed 7 years ago
[Wayland] If started with title bar disabled, context menus are misplaced
Categories
(Core :: Widget: Gtk, defect)
Tracking
()
RESOLVED
FIXED
mozilla63
| Tracking | Status | |
|---|---|---|
| firefox63 | --- | fixed |
People
(Reporter: moz, Assigned: stransky)
References
(Blocks 2 open bugs)
Details
Attachments
(5 files)
User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:60.0) Gecko/20100101 Firefox/60.0
Build ID: 20100101
Steps to reproduce:
1. start firefox-wayland
2. open "Customize…" from sandwich menu
3. uncheck "Title Bar"
4. restart firefox-wayland
5. right-click anywhere in the browser content
Actual results:
The context menu is not placed near the mouse pointer, but some pixels lower and more right. It looks like the positioning is relative to the wrong point.
Expected results:
The context menu should show up at the mouse position.
Additional info:
This bug only affects the browser content. The context menu on url bar or toolbar buttons is placed correctly. Also, with tabs.remote.autostart=false (i.e. e10s disabled), this issue is gone.
Affected version:
Firefox build on Fedora 28, firefox-60.0.1-3.fc28.x86_64
| Assignee | ||
Updated•7 years ago
|
Component: Untriaged → Widget: Gtk
Product: Firefox → Core
I'm not sure whether this is the exact same phenomenon or not, but I've got titlebar hidden, Running Firefox 61 dev edition (61.0b11 (64-bit)) on Ubuntu 18.04 with Gnome-Wayland desktop (so FFX is presumably using x11-wayland).
Inexplicably, a right-click sometimes misplaces the context menu. The second click on the same target always corrects the problem. I *did not* just open the browser for the first time (though I did just open this tab in the example). I've had the titlebar hidden setting clicked since I installed the browser a month ago. I've attached a PNG example from a screenshot of this happening just today.
Note also that I've got an HDPI touchscreen. Might be irrelevant, but I've seen it cause unexpected behavior with applications in the past.
another example of a misplaced context menu, this time when right-clicking tab, not content
| Reporter | ||
Comment 8•7 years ago
|
||
@jackson: Your bug may be related, but I doubt it's the same. This bug report here is about running the pure wayland enabled firefox builds (which defaults builds of 61.0b11 do not support afaik), it is NOT about Firefox using X11 under XWayland in a wayland session. Also, in my case the distance of the context menu misplacement is constant and way smaller, about the same size as the window decorations. This is not the case in your screenshots where subwindows (e.g the autocomplete box) may be moved upwards too.
| Assignee | ||
Updated•7 years ago
|
Blocks: gtktitlebar
| Assignee | ||
Updated•7 years ago
|
Assignee: nobody → stransky
| Assignee | ||
Updated•7 years ago
|
Status: UNCONFIRMED → NEW
Ever confirmed: true
| Assignee | ||
Comment 9•7 years ago
|
||
Comment 10•7 years ago
|
||
Comment on attachment 9003444 [details]
Bug 1464826 - [Wayland] Don't calculate popup offset relatively to mShell on Wayland as it's relative to mContainer, r=jhorak
Jan Horak [:jhorak] has approved the revision.
Attachment #9003444 -
Flags: review+
| Assignee | ||
Updated•7 years ago
|
Keywords: checkin-needed
Comment 11•7 years ago
|
||
Pushed by ebalazs@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/e0c2014dde1b
[Wayland] Don't calculate popup offset relatively to mShell on Wayland as it's relative to mContainer, r=jhorak
Keywords: checkin-needed
Comment 12•7 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 7 years ago
status-firefox63:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla63
You need to log in
before you can comment on or make changes to this bug.
Description
•