Bug 1464826 - [Wayland] Don't calculate popup offset relatively to mShell on Wayland as it's relative to mContainer, r=jhorak

Differential Revision: https://phabricator.services.mozilla.com/D4073